home section completed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <main class="main">
-      <section class="home">
+      <section class="home section" id="home">
         <div class="home__container container grid">
           <div class="home__content">
             <img src="images/home-img.png" class="home__img" alt="" />
