home section completed

--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
           </div>
         </div>
       </section>
+
+      <section class="about section" id="about">
+        <div class="about__container container grid">
+          <div class="about__data">
+            <h2 class="section__title">More About Us</h2>
+            <p class="about__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+              ratione quas totam, molestias perspiciatis vitae vel voluptas
+              explicabo libero unde.
+            </p>
+            <a href="#" class="button"
+              >Know More <i class="bi bi-info-lg"></i>
+            </a>
+          </div>
+          <img src="images/about-img.png" alt="" class="about__img">
+          
+        </div>
+      </section>
     </main>
   </body>
 </html>
