--- a/index.html
+++ b/index.html
@@ -86,10 +86,37 @@
               >Know More <i class="bi bi-info-lg"></i>
             </a>
           </div>
-          <img src="images/about-img.png" alt="" class="about__img">
-          
+          <img src="images/about-img.png" alt="" class="about__img" />
         </div>
       </section>
+
+      <section class="favorite section" id="favorite">
+        <h2>Choose your favorite</h2>
+        <div class="favorite-container">
+          <div class="favorite-card">
+            <div>
+              <article class="favorite-article">
+                <img src="images/favorite-1.png" class="favorite__img" alt="" />
+                <span>Black Model</span>
+              </article>
+              <article class="favorite-article">
+                <img src="images/favorite-2.png" class="favorite__img" alt="" />
+                <span>White Model</span>
+              </article>
+              <article class="favorite-article">
+                <img src="images/favorite-3.png" class="favorite__img" alt="" />
+                <span>Red Model</span>
+              </article>
+              <article class="favorite-article">
+                <img src="images/favorite-4.png" class="favorite__img" alt="" />
+                <span>Teal Model</span>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      
     </main>
   </body>
 </html>
