model section completed

--- a/index.html
+++ b/index.html
@@ -116,7 +116,37 @@
         </div>
       </section>
 
-      
+      <section class="model section" id="model">
+        <h2 class="section__title">Model Specifications</h2>
+        <div class="model__container container grid">
+          <div class="model__content">
+            <img
+              src="images/model-img.png"
+              alt=""
+              class="model__img"
+            />
+            <div class="model__tooltip model__tooltip-1">
+              <img src="images/tooltip-right.svg" alt="" />
+              <span class="model__tooltip-text">Best Confort</span>
+            </div>
+            <div class="model__tooltip model__tooltip-2">
+              <img src="images/tooltip-right.svg" alt="" />
+              <span class="model__tooltip-text">Easy Adjustment</span>
+            </div>
+
+            <div class="model__tooltip model__tooltip-3">
+              <img src="images/tooltip-right.svg" alt="" />
+              <span class="model__tooltip-text">Fast Charge</span>
+            </div>
+
+            <div class="model__tooltip model__tooltip-4">
+              <img src="images/tooltip-right.svg" alt="" />
+              <span class="model__tooltip-text">Custom Audio</span>
+            </div>
+          </div>
+          <a href="#" class="home__button button">Buy Now <i class="bi bi-play-fill"></i></a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
