sponsor section completed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
             <p class="about__description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
               ratione quas totam, molestias perspiciatis vitae vel voluptas
-              explicabo libero unde.
+              explicabo libero unde. Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Ullam sunt iusto odit maiores molestiae
+              quibusdam nam laboriosam excepturi illum est. Lorem ipsum dolor
+              sit amet consectetur adipisicing elit. Accusantium repudiandae
+              iste a quia minus culpa molestias! Sit accusamus similique
+              eveniet.
             </p>
             <a href="#" class="button"
               >Know More <i class="bi bi-info-lg"></i>
@@ -120,11 +125,7 @@
         <h2 class="section__title">Model Specifications</h2>
         <div class="model__container container grid">
           <div class="model__content">
-            <img
-              src="images/model-img.png"
-              alt=""
-              class="model__img"
-            />
+            <img src="images/model-img.png" alt="" class="model__img" />
             <div class="model__tooltip model__tooltip-1">
               <img src="images/tooltip-right.svg" alt="" />
               <span class="model__tooltip-text">Best Confort</span>
@@ -144,7 +145,18 @@
               <span class="model__tooltip-text">Custom Audio</span>
             </div>
           </div>
-          <a href="#" class="home__button button">Buy Now <i class="bi bi-play-fill"></i></a>
+          <a href="#" class="home__button button"
+            >Buy Now <i class="bi bi-play-fill"></i
+          ></a>
+        </div>
+      </section>
+
+      <section class="sponsor container" id="sponsor">
+        <div class="container grid sponsor__container">
+          <img src="images/sponsor-1.png" class="sponsor__img" alt="" />
+          <img src="images/sponsor-2.png" class="sponsor__img" alt="" />
+          <img src="images/sponsor-3.png" class="sponsor__img" alt="" />
+          <img src="images/sponsor-4.png" class="sponsor__img" alt="" />
         </div>
       </section>
     </main>
