--- a/index.html
+++ b/index.html
@@ -159,6 +159,73 @@
           <img src="images/sponsor-4.png" class="sponsor__img" alt="" />
         </div>
       </section>
+
+      <footer class="footer">
+        <div class="footer__container container grid">
+          <div>
+            <a href="" class="footer__logo">JBL</a>
+          </div>
+          <div class="footer__data grid">
+            <div>
+              <h3 class="footer__title">Products</h3>
+              <ul class="footer__links">
+                <li>
+                  <a href="" class="footer__link">Headphones</a>
+                </li>
+                <li>
+                  <a href="" class="footer__link">Earphones</a>
+                </li>
+                <li>
+                  <a href="" class="footer__link">Earbuds</a>
+                </li>
+                <li>
+                  <a href="" class="footer__link">Accessories</a>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <h3 class="footer__title">Support</h3>
+              <ul class="footer__links">
+                <li>
+                  <a href="" class="footer__link">Product Help</a>
+                </li>
+                <li>
+                  <a href="" class="footer__link">Register</a>
+                </li>
+                <li>
+                  <a href="" class="footer__link">Updates</a>
+                </li>
+                <li>
+                  <a href="" class="footer__link">Provides</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__group">
+              <form class="footer__form">
+                <input
+                  type="email"
+                  name=""
+                  id=""
+                  placeholder="Email"
+                  class="footer__input"
+                />
+                <button class="footer__button button">
+                  Subscribe <i class="bi bi-send"></i>
+                </button>
+              </form>
+            </div>
+          </div>
+          <div class="footer__social">
+            <div>
+              <a href="" class="footer__social-link"><i class="bi bi-instagram"></i></a>
+              <a href="" class="footer__social-link"><i class="bi bi-facebook"></i></a>
+              <a href="" class="footer__social-link"><i class="bi bi-linkedin"></i></a>
+              <a href="" class="footer__social-link"><i class="bi bi-twitter-x"></i></a>
+            </div>
+            <span class="footer__copy"> &copy; All Rights Reserved</span>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
