code review & responsive design

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header container" id="header">
+    <header class="header" id="header">
       <nav class="nav">
         <a href="" class="nav__logo">JBL</a>
         <div class="nav__menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="" class="nav__link">Anasayfa</a>
+              <a href="#home" class="nav__link">Anasayfa</a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">Hakkimizda</a>
+              <a href="#about" class="nav__link">Hakkimizda</a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">Favoriler</a>
+              <a href="#favorite" class="nav__link">Favoriler</a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">Modeller</a>
+              <a href="#model" class="nav__link">Modeller</a>
             </li>
           </ul>
         </div>
@@ -96,10 +96,10 @@
       </section>
 
       <section class="favorite section" id="favorite">
-        <h2>Choose your favorite</h2>
+        <h2 class="section__title">Choose your favorite</h2>
         <div class="favorite-container">
           <div class="favorite-card">
-            <div>
+            <div class="favorite-articles">
               <article class="favorite-article">
                 <img src="images/favorite-1.png" class="favorite__img" alt="" />
                 <span>Black Model</span>
@@ -217,10 +217,18 @@
           </div>
           <div class="footer__social">
             <div>
-              <a href="" class="footer__social-link"><i class="bi bi-instagram"></i></a>
-              <a href="" class="footer__social-link"><i class="bi bi-facebook"></i></a>
-              <a href="" class="footer__social-link"><i class="bi bi-linkedin"></i></a>
-              <a href="" class="footer__social-link"><i class="bi bi-twitter-x"></i></a>
+              <a href="" class="footer__social-link"
+                ><i class="bi bi-instagram"></i
+              ></a>
+              <a href="" class="footer__social-link"
+                ><i class="bi bi-facebook"></i
+              ></a>
+              <a href="" class="footer__social-link"
+                ><i class="bi bi-linkedin"></i
+              ></a>
+              <a href="" class="footer__social-link"
+                ><i class="bi bi-twitter-x"></i
+              ></a>
             </div>
             <span class="footer__copy"> &copy; All Rights Reserved</span>
           </div>
