--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <div class="nav__menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#home" class="nav__link">Anasayfa</a>
+              <a href="#home" class="nav__link">Home</a>
             </li>
             <li class="nav__item">
-              <a href="#about" class="nav__link">Hakkimizda</a>
+              <a href="#about" class="nav__link">About Us</a>
             </li>
             <li class="nav__item">
-              <a href="#favorite" class="nav__link">Favoriler</a>
+              <a href="#favorite" class="nav__link">Favorites</a>
             </li>
             <li class="nav__item">
-              <a href="#model" class="nav__link">Modeller</a>
+              <a href="#model" class="nav__link">Models</a>
             </li>
           </ul>
         </div>
